--- a/apiPermisosMichus/src/main/resources/application.properties
+++ b/apiPermisosMichus/src/main/resources/application.properties
@@ -21,4 +21,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8065/eureka/
 # Configuracion para desactivar SSL si es necesario
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Michus;encrypt=false;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=sql
+spring.datasource.password=Sql
